update for java 17, javafx and jpackage plugin